updated some pages

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,6 +3,17 @@
 
 @custom-variant dark (&:is(.dark *));
 
+
+@layer base{
+  html{
+    height: 100%;
+  }
+  body{
+    min-height: 100%;
+    height: 100%;
+  }
+}
+
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
